--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,8 @@
 
   <body>
     <%= yield %>
+    <% if current_user %>
+      <%= render 'layouts/bottom_nav' %>
+    <% end %>
   </body>
 </html>
