--- a/app/views/home/_bet_option.html.erb
+++ b/app/views/home/_bet_option.html.erb
@@ -11,7 +11,7 @@
     <div class="bet-odds"><%= odds %></div>
   </button>
 <% else %>
-  <div class="bet-button disabled">
-    <div class="bet-value">-</div>
+  <div class="bet-button-placeholder">
+    <div class="bet-dash">—</div>
   </div>
 <% end %>
