--- a/app/views/home/_betting_styles.html.erb
+++ b/app/views/home/_betting_styles.html.erb
@@ -67,10 +67,11 @@
   }
 
   .bet-card {
-    margin: 16px;
+    margin: 8px;
+    padding: 8px;
     background: black;
     border-radius: 12px;
-    padding: 12px;
+
     color: white;
   }
 
@@ -78,7 +79,7 @@
     display: grid;
     grid-template-columns: minmax(110px, auto) auto auto auto;
     grid-template-rows: auto auto auto auto;
-    gap: 1px;
+    gap: 8px 2px;
     align-items: center;
   }
 
@@ -164,7 +165,7 @@
     color: #b5b5b5;
     font-size: 12px;
     font-style: italic;
-    margin-top: 8px;
+    margin-right: 8px;
     text-align: right;
   }
 
